--- a/app/templates/auth/telegram_miniapp.html
+++ b/app/templates/auth/telegram_miniapp.html
@@ -11,22 +11,14 @@
 
             <!-- Telegram Login Widget -->
             <div id="telegram-widget-container">
-                <script
-                    async
-                    src="https://telegram.org/js/telegram-widget.js?22"
-                    data-telegram-login="authcysubot"
-                    data-size="large"
-                    data-onauth="onTelegramAuth(user)"
-                    data-request-access="write"
-                ></script>
+                <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="authcysubot"
+                    data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
             </div>
 
             <!-- Альтернативная кнопка, если виджет не загрузился -->
             <div id="fallback-button" style="display: none; margin-top: 15px">
-                <a
-                    href="https://oauth.telegram.org/auth?bot_id=8102415932&origin={{ request.url_root }}&embed=1&request_access=write&return_to={{ request.url }}"
-                    class="btn btn-primary btn-lg"
-                    style="
+                <a href="https://oauth.telegram.org/auth?bot_id=8102415932&origin={{ request.url_root }}&embed=1&request_access=write&return_to={{ request.url }}"
+                    class="btn btn-primary btn-lg" style="
                         padding: 12px 24px;
                         font-size: 1rem;
                         border-radius: 8px;
@@ -34,8 +26,7 @@
                         width: 100%;
                         text-decoration: none;
                         display: inline-block;
-                    "
-                >
+                    ">
                     <i class="fab fa-telegram me-2"></i>
                     Войти через Telegram
                 </a>
